Working in refactoring method setObjective()